--- a/Omni_channel_chatbot/backend/nixpacks.toml
+++ b/Omni_channel_chatbot/backend/nixpacks.toml
@@ -1,12 +1,11 @@
 # Nixpacks configuration for Railway
+# Optimized to reduce image size
+
 [phases.setup]
-nixPkgs = ["python39", "postgresql"]
+nixPkgs = ["python311"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
-
-[phases.build]
-cmds = []
+cmds = ["pip install --no-cache-dir -r requirements.railway.txt"]
 
 [start]
-cmd = "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
