--- a/Omni_channel_chatbot/backend/alembic.ini
+++ b/Omni_channel_chatbot/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql+asyncpg://postgres:210506@localhost:5432/chatdesk
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/chatdesk
 
 [loggers]
 keys = root,sqlalchemy,alembic
