--- a/Omni_channel_chatbot/backend/requirements.railway.txt
+++ b/Omni_channel_chatbot/backend/requirements.railway.txt
@@ -11,6 +11,7 @@ passlib[bcrypt]==1.7.*
 python-multipart==0.0.*
 pydantic==2.10.*
 pydantic-settings==2.7.*
+email-validator==2.2.*
 httpx==0.28.*
 groq==0.15.*
 python-dotenv==1.0.*
