Fix 3 bugs + add FB test page

--- a/Omni_channel_chatbot/backend/.env.railway
+++ b/Omni_channel_chatbot/backend/.env.railway
@@ -31,3 +31,7 @@ FB_OAUTH_REDIRECT_URI=https://omnichannelchatbotserver-production.up.railway.app
 # ======= CORS =======
 # >>> Sau khi deploy frontend, thêm domain frontend vào đây <<<
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000,https://omnichannelchatbotserver-production.up.railway.app
+
+# ======= FRONTEND URL (cho OAuth redirect sau khi kết nối FB) =======
+# >>> Khi deploy frontend, đổi thành URL frontend thật <<<
+FRONTEND_URL=http://localhost:5173
